--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,11 @@ go:
   - 1.3
   - 1.4
   - tip
+
+script:
+  - go get golang.org/x/tools/cmd/cover
+  - go get github.com/mattn/goveralls
+  - go test -v -covermode=count -coverprofile=coverage.out
+
+after_success:
+  - goveralls -coverprofile=coverage.out -service=travis-ci
